fix: overflow-x on AdvertDetail

--- a/frontend/src/pages/advertDetail/advertDetail.css
+++ b/frontend/src/pages/advertDetail/advertDetail.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 0.5rem;
+    overflow-x: hidden;
 }
 
 .advert-detail__title {
